--- a/css/styles.css
+++ b/css/styles.css
@@ -1,132 +1,137 @@
 @charset "utf-8";
 /* CSS Document */
 
-body,td,th,p{
+body,
+td,
+th,
+p {
 	font-family: Arial, Helvetica, sans-serif;
-	font-size: 10pt;
+  font-size: 0.833rem;
 	color: #333;
 	line-height: 1.5;
 }
+
 body {
 	background-color: #fdfdfd;
 	margin: 0;
 	position:relative;
 }
-ul, li {
+
+ul,
+li {
 	font-family: Arial, Helvetica, sans-serif;
-	font-size: 10pt;
+  font-size: 0.833rem;
 	color: #333;
 }
+
 a {
 	color: orange;
 	text-decoration: none;
 }
-a:hover, a:focus {
+
+a:hover,
+a:focus {
 	color: #3397db;
 	text-decoration: none;
 }
-a img{
+
+a img {
 	border: none 0px #fff;
 }
-h1, h2, h3, h4, h5, h6 {
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
   font-family: Arial, Helvetica, sans-serif;
-  margin: 0 0 20px;
+  margin: 0 0 1.25em;
 }
-article, aside, canvas, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
+
+article,
+aside,
+canvas,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section {
 	display: block;
 }
+
+
+/* ====================== Main Content ====================== */
 #maincontent {
   background-color: #f3f3f3;
   min-height: 100%;
+  width: 100%;
 }
-#footer {
-  background-color: #444;
-  color: #aaa;
-  font-size: 8pt;
-  letter-spacing: 1px;
-  padding: 25px;
-  text-align: center;
-  text-transform: uppercase;
-}
+
+
 /* ====================== Navigation ====================== */
 nav {
-  width: 100%;
-  height: 80px;
+  padding: 0 2em;
+  width: calc(100% - 4em);
+  height: 6em;
   background-color: #252831;
-  text-align:center;
+  display: flex;
+  text-align: center;
 }
+
 nav h1 {
   margin: auto;
 }
+
 nav h1 a {
   color: #fff;
-  font-size: 14pt;
+  font-size: 1.167rem;
   font-weight: 200;
-  letter-spacing: 10px;
+  letter-spacing: 0.6rem;
   text-transform: uppercase;
 }
-#breadcrumb {
-    padding: 10px 40px 16px;
-    list-style: none;
-    background-color: #eee;
-    font-size: 17px;
-    margin: 0;
-    width: calc(50% - 80px);
-}
 
-/* Display list items side by side */
-#breadcrumb li {
-    display: inline;
-}
 
-/* Add a slash symbol (/) before/behind each list item */
-#breadcrumb li+li:before {
-    padding: 8px;
-    color: black;
-    content: "/\00a0";
-}
-
-/* Add a color to all links inside the list */
-#breadcrumb li a {
-    color: #0275d8;
-    text-decoration: none;
-}
-
-/* Add a color on mouse-over */
-#breadcrumb li a:hover {
-    color: #01447e;
-    text-decoration: underline;
-}
 /* ====================== Map ====================== */
 #map {
-  height: 400px;
+  height: 33.3em;
   width: 100%;
   background-color: #ccc;
 }
 /* ====================== Restaurant Filtering ====================== */
 .filter-options {
   width: 100%;
-  height: 50px;
+  height: 100%;
   background-color: #3397DB;
   align-items: center;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  padding: 1.26em 0;
 }
+
 .filter-options h2 {
   color: white;
   font-size: 1rem;
   font-weight: normal;
   line-height: 1;
-  margin: 0 20px;
+  margin: 0 1.25em;
 }
+
 .filter-options select {
   background-color: white;
-  border: 1px solid #fff;
+  border: 0.08em solid #fff;
   font-family: Arial,sans-serif;
-  font-size: 11pt;
-  height: 35px;
+  font-size: 0.917rem;
+  height: 2.39em;
   letter-spacing: 0;
-  margin: 10px;
-  padding: 0 10px;
-  width: 200px;
+  margin: 0.68em;
+  padding: 0 0.68em;
+  width: 13.65em;
 }
 
 /* ====================== Restaurant Listing ====================== */
@@ -134,142 +139,367 @@ nav h1 a {
   background-color: #f3f3f3;
   list-style: outside none none;
   margin: 0;
-  padding: 30px 15px 60px;
+  padding: 2.25em 1.15em 4.5em;
   text-align: center;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
 }
+
 #restaurants-list li {
   background-color: #fff;
-  border: 2px solid #ccc;
+  border: 0.1em solid #ccc;
   font-family: Arial,sans-serif;
-  margin: 15px;
-  min-height: 380px;
-  padding: 0 30px 25px;
+  margin: 1.1em;
+  min-height: 23.75em;
+  padding: 0 2.24em 1.9em;
   text-align: left;
-  width: 270px;
+  width: 20.3em;
+  display:flex;
+  flex-direction: column;
 }
+
 #restaurants-list .restaurant-img {
   background-color: #ccc;
   display: block;
   margin: 0;
   max-width: 100%;
-  min-height: 248px;
-  min-width: 100%;
+  width: 100%;
+  height: auto;
 }
+
 #restaurants-list li h1 {
   color: #f18200;
   font-family: Arial,sans-serif;
-  font-size: 14pt;
+  font-size: 1.167rem;
   font-weight: 200;
   letter-spacing: 0;
   line-height: 1.3;
-  margin: 20px 0 10px;
+  margin: 1em 0 0.6em;
   text-transform: uppercase;
+  text-align: center;
+  padding: 0 0 0.4em;
 }
+
 #restaurants-list p {
   margin: 0;
-  font-size: 11pt;
+  font-size: 0.92rem;
 }
 #restaurants-list li a {
   background-color: orange;
-  border-bottom: 3px solid #eee;
+  border-bottom: 0.188em solid #eee;
   color: #fff;
   display: inline-block;
-  font-size: 10pt;
-  margin: 15px 0 0;
-  padding: 8px 30px 10px;
+  font-size: 0.834rem;
+  margin: 1.05em 0 0;
+  padding: 0.7em 2.25em 0.625em;
   text-align: center;
   text-decoration: none;
   text-transform: uppercase;
 }
 
-/* ====================== Restaurant Details ====================== */
+
+/* ====================== Footer ====================== */
+#footer {
+  background-color: #444;
+  color: #aaa;
+  font-size: 0.65rem;
+  letter-spacing: 0.0625rem;
+  padding: 2em 0;
+  text-align: center;
+  text-transform: uppercase;
+  line-height: 2;
+}
+
+
+/* ====================== Restaurant Details Page ====================== */
+/* Restaurant page header */
 .inside header {
   position: fixed;
   top: 0;
   width: 100%;
   z-index: 1000;
 }
+
+/* ============ Breadcrumb ============*/
+#breadcrumb {
+  padding: 0.85em 2em;
+  list-style: none;
+  background-color: #eee;
+  font-size: 1.063rem;
+  margin: 0;
+  height: 1.5em;
+  width: calc(50% - 4em);
+}
+
+/* Display list items side by side */
+#breadcrumb li {
+  display: inline;
+}
+
+/* Add a slash symbol (/) before/behind each list item */
+#breadcrumb li+li:before {
+  padding: 0.65em;
+  color: black;
+  content: "/\00a0";
+}
+
+/* Add a color to all links inside the list */
+#breadcrumb li a {
+  color: #0275d8;
+  text-decoration: none;
+}
+
+/* Add a color on mouse-over */
+#breadcrumb li a:hover {
+  color: #01447e;
+  text-decoration: underline;
+}
+
+/* Restaurant page map */
 .inside #map-container {
   background: blue none repeat scroll 0 0;
   height: 87%;
   position: fixed;
   right: 0;
-  top: 80px;
+  top: 6em;
   width: 50%;
+  z-index: 1500;
 }
+
 .inside #map {
   background-color: #ccc;
   height: 100%;
   width: 100%;
 }
+
+
+/* ============== Restraunt Content =========== */
+#restaurant-name {
+  color: #f18200;
+  font-family: Arial,sans-serif;
+  font-size: 1.67rem;
+  font-weight: 200;
+  letter-spacing: 0;
+  margin: 0.7em 0;
+  text-transform: uppercase;
+  line-height: 1.1;
+}
+
+/* Restraunt Image */
+#restaurant-img {
+  width: 100%;
+  height: auto;
+  max-width: 100%;
+}
+
+/* Restraunt Cuisine */
+#restaurant-cuisine {
+  background-color: #333;
+  color: #ddd;
+  font-size: 1rem;
+  font-weight: 300;
+  letter-spacing: 0.625rem;
+  margin: 0 0 1.25em;
+  padding: 0.85em 0;
+  text-align: center;
+  text-transform: uppercase;
+  width: 100%;
+}
+
+/* Restraunt Address */
+#restaurant-address {
+  font-size: 1.15rem;
+  margin: 0.75em 0;
+}
+
+#restaurant-hours td {
+  color: #666;
+}
+
+
+#restaurant-container,
+#reviews-container {
+  border-bottom: 0.063em solid #d9d9d9;
+  border-top: 0.063em solid #fff;
+  padding: 10.55em 2em 2.1em;
+  width: calc(50% - 4em);
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+
+/* Reviews Part */
+#reviews-container {
+  padding: 2.25em 2em 6em;
+}
+
+#reviews-container h2 {
+  color: #f58500;
+  font-size: 1.55rem;
+  font-weight: 300;
+  letter-spacing: -0.063rem;
+  margin-bottom: 0.7em;
+}
+
+#reviews-list {
+  margin: 0;
+  padding: 0;
+}
+
+#reviews-list li {
+  background-color: #fff;
+  border: 0.1em solid #f3f3f3;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  list-style-type: none;
+  margin: 0 0 2.2em;
+  overflow: hidden;
+  padding: 0 1.5em 1.5em;
+  position: relative;
+  width: 85%;
+}
+
+/* User name */
+#reviews-list li>p:first-child {
+  width: 50%;
+  font-size: 1.2rem;
+  align-self: center;
+}
+
+/* Review date */
+#reviews-list li>p:nth-child(2) {
+  width: 50%;
+  text-align: right;
+  align-self: center;
+}
+
+/* Rating */
+#reviews-list li>p:nth-child(3) {
+  font-size: 0.9rem;
+  margin: -0.6em 0 0;
+  width: 100%;
+  padding-top: 0.9em;
+}
+
+/* Review Message */
+#reviews-list li>p:last-child {
+  width: 100%;
+  padding: 0.85em;
+  line-height: 2;
+  font-size: 0.9rem;
+}
+
+
+/* Restaurant page footer */
 .inside #footer {
   bottom: 0;
   position: absolute;
   width: 50%;
 }
-#restaurant-name {
-  color: #f18200;
-  font-family: Arial,sans-serif;
-  font-size: 20pt;
-  font-weight: 200;
-  letter-spacing: 0;
-  margin: 15px 0 30px;
-  text-transform: uppercase;
-  line-height: 1.1;
+
+
+
+/* TODO: Media query for make responsive design */
+@media screen and (max-width: 56em) and (min-width: 44em) {
+  /* ======== Restaurant Details page ======== */
+  #restaurant-container,
+  #reviews-container {
+    padding-left: 1.8em;
+    padding-right: 1.8em;
+    width: calc(50% - 3.6em);
+  }
+
+  #breadcrumb {
+      padding: 0.85em 1.8em;
+      width: calc(50% - 3.6em);
+  }
+
+  #restaurant-name {
+    font-size: 1.35rem;
+  }
+
+  #reviews-container h2 {
+    font-size: 1.28rem;
+  }
+
+  #restaurant-address {
+      font-size: 1.03rem;
+    }
+
+ .inside #footer {
+    font-size: 0.6rem;
+    padding: 2em;
+    width: calc(50% - 4em);
+  }
 }
-#restaurant-img {
-	width: 90%;
-}
-#restaurant-address {
-  font-size: 12pt;
-  margin: 10px 0px;
-}
-#restaurant-cuisine {
-  background-color: #333;
-  color: #ddd;
-  font-size: 12pt;
-  font-weight: 300;
-  letter-spacing: 10px;
-  margin: 0 0 20px;
-  padding: 2px 0;
-  text-align: center;
-  text-transform: uppercase;
-	width: 90%;
-}
-#restaurant-container, #reviews-container {
-  border-bottom: 1px solid #d9d9d9;
-  border-top: 1px solid #fff;
-  padding: 140px 40px 30px;
-  width: 50%;
-}
-#reviews-container {
-  padding: 30px 40px 80px;
-}
-#reviews-container h2 {
-  color: #f58500;
-  font-size: 24pt;
-  font-weight: 300;
-  letter-spacing: -1px;
-  padding-bottom: 1pt;
-}
-#reviews-list {
-  margin: 0;
-  padding: 0;
-}
-#reviews-list li {
-  background-color: #fff;
-    border: 2px solid #f3f3f3;
-  display: block;
-  list-style-type: none;
-  margin: 0 0 30px;
-  overflow: hidden;
-  padding: 0 20px 20px;
-  position: relative;
-  width: 85%;
-}
-#reviews-list li p {
-  margin: 0 0 10px;
-}
-#restaurant-hours td {
-  color: #666;
+
+
+@media screen and (max-width: 44em) {
+  /* ========== Main page ========== */
+  .filter-options {
+    flex-direction: column;
+  }
+
+  .filter-options select {
+    width: 18em;
+  }
+
+  nav h1 a {
+    font-size: 1.1rem;
+    letter-spacing: 0.3rem;
+  }
+
+  #footer,
+  .inside #footer {
+    padding: 2em;
+    width: calc(100% - 4em);
+  }
+
+  /* ===== Restaurant Details page ======= */
+  .inside #map-container {
+    height: 20em;
+    position: relative;
+    left: 0;
+    top: 10em;
+  }
+
+  #breadcrumb,
+  .inside #map-container {
+    width: 100%;
+  }
+
+  #breadcrumb {
+    padding-left: 0;
+    text-align: center;
+  }
+
+  #restaurant-container,
+  #reviews-container {
+    width: calc(100% - 4em);
+  }
+
+  #restaurant-name {
+    font-size: 1.5rem;
+    margin: 0.55em auto 1.15em;
+    text-align: center;
+  }
+
+  #restaurant-address {
+    font-size: 1rem;
+  }
+
+  #reviews-container h2 {
+    font-size: 1.23rem;
+  }
+
+  #reviews-list li>p:first-child {
+    font-size: 1.1rem;
+  }
+
+  .inside header {
+    z-index: 2000;
+  }
 }
