--- a/css/styles.css
+++ b/css/styles.css
@@ -5,27 +5,27 @@ body,
 td,
 th,
 p {
-	font-family: Arial, Helvetica, sans-serif;
+  font-family: "Open Sans", sans-serif;
   font-size: 0.833rem;
-	color: #333;
-	line-height: 1.5;
+  color: #18254f;
+  line-height: 1.5;
 }
 
 body {
-	background-color: #fdfdfd;
+	background-color: #fbf1da;
 	margin: 0;
 	position:relative;
 }
 
 ul,
 li {
-	font-family: Arial, Helvetica, sans-serif;
+  font-family: "Open Sans", sans-serif;
   font-size: 0.833rem;
-	color: #333;
+  color: #18254f;
 }
 
 a {
-	color: orange;
+  color: #e78d1e;
 	text-decoration: none;
 }
 
@@ -45,7 +45,7 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: "Open Sans", sans-serif;
   margin: 0 0 1.25em;
 }
 
@@ -67,7 +67,7 @@ section {
 
 /* ====================== Main Content ====================== */
 #maincontent {
-  background-color: #f3f3f3;
+  background-color: #fbf1da;
   min-height: 100%;
   width: 100%;
 }
@@ -78,7 +78,7 @@ nav {
   padding: 0 2em;
   width: calc(100% - 4em);
   height: 6em;
-  background-color: #252831;
+  background-color: #18254f;
   display: flex;
   text-align: center;
 }
@@ -88,7 +88,7 @@ nav h1 {
 }
 
 nav h1 a {
-  color: #fff;
+  color: #e78d1e;
   font-size: 1.167rem;
   font-weight: 200;
   letter-spacing: 0.6rem;
@@ -100,13 +100,24 @@ nav h1 a {
 #map {
   height: 33.3em;
   width: 100%;
-  background-color: #ccc;
+  background-color: #fff;
 }
+
+.leaflet-bottom {
+  background-color: #fff;
+}
+
+.leaflet-container .leaflet-bottom a{
+  color: #a63b35;
+  cursor: pointer;
+}
+
+
 /* ====================== Restaurant Filtering ====================== */
 .filter-options {
   width: 100%;
   height: 100%;
-  background-color: #3397DB;
+  background-color: #18254f;
   align-items: center;
   display: flex;
   flex-direction: row;
@@ -123,20 +134,27 @@ nav h1 a {
 }
 
 .filter-options select {
-  background-color: white;
+  background-color: #fff;
   border: 0.08em solid #fff;
-  font-family: Arial,sans-serif;
+  font-family: "Open Sans", sans-serif;
   font-size: 0.917rem;
   height: 2.39em;
   letter-spacing: 0;
   margin: 0.68em;
   padding: 0 0.68em;
   width: 13.65em;
+  color: #18254f;
+  cursor: pointer;
 }
+
+.filter-options select:focus{
+  box-shadow: 0 0 8px 4px #fbf1da;
+}
+
 
 /* ====================== Restaurant Listing ====================== */
 #restaurants-list {
-  background-color: #f3f3f3;
+  background-color: #fbf1da;
   list-style: outside none none;
   margin: 0;
   padding: 2.25em 1.15em 4.5em;
@@ -149,8 +167,8 @@ nav h1 a {
 
 #restaurants-list li {
   background-color: #fff;
-  border: 0.1em solid #ccc;
-  font-family: Arial,sans-serif;
+  border: 0.1em solid #ead8c2;
+  font-family: "Open Sans", sans-serif;
   margin: 1.1em;
   min-height: 23.75em;
   padding: 0 2.24em 1.9em;
@@ -160,19 +178,13 @@ nav h1 a {
   flex-direction: column;
 }
 
-#restaurants-list .restaurant-img {
-  background-color: #ccc;
-  display: block;
-  margin: 0;
-  max-width: 100%;
-  width: 100%;
-  height: auto;
-  order: -1;
+#restaurants-list li:hover{
+  border: 0.1em solid #a63b35;
 }
 
 #restaurants-list li h3 {
-  color: #f18200;
-  font-family: Arial,sans-serif;
+  color: #a63b35;
+  font-family: "Open Sans", sans-serif;
   font-size: 1.167rem;
   font-weight: 200;
   letter-spacing: 0;
@@ -181,16 +193,33 @@ nav h1 a {
   text-transform: uppercase;
   text-align: center;
   padding: 0 0 0.4em;
+  border-bottom: 0.05em dashed #ead8c2;
 }
 
 #restaurants-list p {
   margin: 0;
   font-size: 0.92rem;
 }
+
+#restaurants-list li p:first-of-type {
+  color: #a63b35;
+}
+
+#restaurants-list .restaurant-img {
+  background-color: #fff;
+  display: block;
+  margin: 0;
+  max-width: 100%;
+  width: 100%;
+  height: auto;
+  order: -1;
+}
+
+
 #restaurants-list li a {
-  background-color: orange;
-  border-bottom: 0.188em solid #eee;
-  color: #fff;
+  background-color: #fbf1da;
+  border-bottom: 0.188em solid #a63b35;
+  color: #a63b35;
   display: inline-block;
   font-size: 0.834rem;
   margin: 1.05em 0 0;
@@ -200,11 +229,18 @@ nav h1 a {
   text-transform: uppercase;
 }
 
+#restaurants-list li a:hover,
+#restaurants-list li a:focus{
+  background-color: #a63b35;
+  border-bottom: 0.188em solid #ead8c2;
+  color: #fff;
+}
+
 
 /* ====================== Footer ====================== */
 #footer {
-  background-color: #444;
-  color: #aaa;
+  background-color: #18254f;
+  color: #fff;
   font-size: 0.65rem;
   letter-spacing: 0.0625rem;
   padding: 2em 0;
@@ -227,28 +263,30 @@ nav h1 a {
 #breadcrumb {
   padding: 0.85em 2em;
   list-style: none;
-  background-color: #eee;
+  background-color: #ead8c2;
   font-size: 1.063rem;
   margin: 0;
   height: 1.5em;
   width: calc(50% - 4em);
+  color: #fbf1da;
 }
 
 /* Display list items side by side */
 #breadcrumb li {
   display: inline;
+  color: #18254f;
 }
 
 /* Add a slash symbol (/) before/behind each list item */
 #breadcrumb li+li:before {
   padding: 0.65em;
-  color: black;
+  color: #18254f;
   content: "/\00a0";
 }
 
 /* Add a color to all links inside the list */
 #breadcrumb li a {
-  color: #0275d8;
+  color: #0060b3;
   text-decoration: none;
 }
 
@@ -270,7 +308,7 @@ nav h1 a {
 }
 
 .inside #map {
-  background-color: #ccc;
+  background-color: #fff;
   height: 100%;
   width: 100%;
 }
@@ -278,8 +316,8 @@ nav h1 a {
 
 /* ============== Restraunt Content =========== */
 #restaurant-name {
-  color: #f18200;
-  font-family: Arial,sans-serif;
+  color: #a63b35;
+  font-family: "Open Sans", sans-serif;
   font-size: 1.67rem;
   font-weight: 200;
   letter-spacing: 0;
@@ -297,8 +335,8 @@ nav h1 a {
 
 /* Restraunt Cuisine */
 #restaurant-cuisine {
-  background-color: #333;
-  color: #ddd;
+  background-color: #18254f;
+  color: #fbf1da;
   font-size: 1rem;
   font-weight: 300;
   letter-spacing: 0.625rem;
@@ -313,16 +351,37 @@ nav h1 a {
 #restaurant-address {
   font-size: 1.15rem;
   margin: 0.75em 0;
+  color: #18254f;
+}
+
+
+/* Time table */
+#restaurant-hours {
+  font-size: 1.1rem;
+}
+
+#restaurant-hours tr{
+  height: 2em;
 }
 
 #restaurant-hours td {
-  color: #666;
+  vertical-align: top;
+  border-bottom: 0.05em dashed #ead8c2;
+  height: 3em;
+  min-width: 6.5em;
+  color:#18254f;
+  font-size: 0.92rem;
+  line-height: 2;
+}
+
+#restaurant-hours tr:last-child td {
+  border: none;
 }
 
 
 #restaurant-container,
 #reviews-container {
-  border-bottom: 0.063em solid #d9d9d9;
+  border-bottom: 0.063em solid #ead8c2;
   border-top: 0.063em solid #fff;
   padding: 10.55em 2em 2.1em;
   width: calc(50% - 4em);
@@ -337,7 +396,7 @@ nav h1 a {
 }
 
 #reviews-container h3 {
-  color: #f58500;
+  color: #a63b35;
   font-size: 1.55rem;
   font-weight: 300;
   letter-spacing: -0.063rem;
@@ -351,7 +410,7 @@ nav h1 a {
 
 #reviews-list li {
   background-color: #fff;
-  border: 0.1em solid #f3f3f3;
+  border: 0.1em dashed #ead8c2;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
@@ -366,6 +425,7 @@ nav h1 a {
 /* User name */
 #reviews-list li>p:first-child {
   width: 50%;
+  color: #a63b35;
   font-size: 1.2rem;
   align-self: center;
 }
@@ -373,22 +433,27 @@ nav h1 a {
 /* Review date */
 #reviews-list li>p:nth-child(2) {
   width: 50%;
+  color: #18254f;
   text-align: right;
   align-self: center;
 }
 
 /* Rating */
 #reviews-list li>p:nth-child(3) {
+  color: #0060b3;
   font-size: 0.9rem;
   margin: -0.6em 0 0;
   width: 100%;
+  border-top: 0.05em dashed #ead8c2;
   padding-top: 0.9em;
 }
 
 /* Review Message */
 #reviews-list li>p:last-child {
   width: 100%;
+  color: #18254f;
   padding: 0.85em;
+  background-color: #fbf1da;
   line-height: 2;
   font-size: 0.9rem;
 }
@@ -400,7 +465,6 @@ nav h1 a {
   position: absolute;
   width: 50%;
 }
-
 
 
 /* TODO: Media query for make responsive design */
